[PAT-528] Cassette minifier strips css3 symbol - add missing test file to Cassette.IntegrationTests project

--- a/src/Cassette.IntegrationTests/Cassette.IntegrationTests.csproj
+++ b/src/Cassette.IntegrationTests/Cassette.IntegrationTests.csproj
@@ -94,6 +94,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CassetteApplication.cs" />
+    <Compile Include="CombinedBundles\CombinedStylesheetBundle.cs" />
     <Compile Include="Compilation\CoffeeScriptCompiler.cs" />
     <Compile Include="IsolatedStorageFileSystem.cs" />
     <Compile Include="MSBuild\CreateBundles.cs" />
